--- a/cs180/proj4/index.html
+++ b/cs180/proj4/index.html
@@ -68,7 +68,7 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/macbook/macbook.jpeg" align="middle" width="400px" />
+            <img src="./Images/macbook/macbook.jpg" align="middle" width="400px" />
             <figcaption>Macbook (Original)</figcaption>
           </td>
           <td>
@@ -78,31 +78,31 @@
         </tr>
         <tr align="center">
           <td>
-            <img src="./Images/kitchen/sink_left.jpeg" align="middle" width="400px" />
+            <img src="./Images/kitchen/sink_left.jpg" align="middle" width="400px" />
             <figcaption>Kitchen Left</figcaption>
           </td>
           <td>
-            <img src="./Images/kitchen/sink_right.jpeg" align="middle" width="400px" />
+            <img src="./Images/kitchen/sink_right.jpg" align="middle" width="400px" />
             <figcaption>Kitchen Right</figcaption>
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="./Images/outside-street/outside_left.jpeg" align="middle" width="400px" />
+            <img src="./Images/outside-street/outside_left.jpg" align="middle" width="400px" />
             <figcaption>Outside Street Left</figcaption>
           </td>
           <td>
-            <img src="./Images/outside-street/outside_right.jpeg" align="middle" width="400px" />
+            <img src="./Images/outside-street/outside_right.jpg" align="middle" width="400px" />
             <figcaption>Outside Street Right</figcaption>
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="./Images/campanile/campanile_left.jpeg" align="middle" width="400px" />
+            <img src="./Images/campanile/campanile_left.jpg" align="middle" width="400px" />
             <figcaption>Campanile Left</figcaption>
           </td>
           <td>
-            <img src="./Images/campanile/campanile_right.jpeg" align="middle" width="400px" />
+            <img src="./Images/campanile/campanile_right.jpg" align="middle" width="400px" />
             <figcaption>Campanile Right</figcaption>
           </td>
         </tr>
@@ -203,7 +203,7 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/macbook/macbook.jpeg" align="middle" width="400px" />
+            <img src="./Images/macbook/macbook.jpg" align="middle" width="400px" />
             <figcaption>MacBook (Original)</figcaption>
           </td>
           <td>
@@ -236,11 +236,11 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/kitchen/sink_left.jpeg" align="middle" width="300px" />
+            <img src="./Images/kitchen/sink_left.jpg" align="middle" width="300px" />
             <figcaption>Kitchen Left</figcaption>
           </td>
           <td>
-            <img src="./Images/kitchen/sink_right.jpeg" align="middle" width="300px" />
+            <img src="./Images/kitchen/sink_right.jpg" align="middle" width="300px" />
             <figcaption>Kitchen Right</figcaption>
           </td>
           <td>
